Forward launcher output to task log